<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="ua.knight.testtask.features.model.user.User" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewAvatar"
                android:layout_width="@dimen/image_size_large"
                android:layout_height="@dimen/image_size_large"
                android:layout_margin="@dimen/margin_dp_24"
                android:contentDescription="@string/content_description_user_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:loadInto="@{model.image}"
                app:rounded="@{true}" />

            <TextView
                android:id="@+id/textViewFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_dp_16"
                android:text="@{model.fullName}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/imageViewAvatar"
                app:layout_constraintStart_toStartOf="@id/imageViewAvatar"
                app:layout_constraintTop_toBottomOf="@id/imageViewAvatar"
                tools:text="Name Surname" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_dp_4"
                android:alpha="0.5"
                android:text="@{model.email}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@id/textViewFullName"
                app:layout_constraintStart_toStartOf="@id/textViewFullName"
                app:layout_constraintTop_toBottomOf="@id/textViewFullName"
                tools:text="email@example.com" />

            <LinearLayout
                android:layout_width="@dimen/width_dp_0"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_dp_16"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewEmail">

                <TextView
                    style="@style/UserDetailsInfoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_gender" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_dp_4"
                    android:text="@{model.gender}"
                    android:textColor="?colorPrimary"
                    android:textSize="@dimen/text_size_sp_18"
                    tools:text="Male" />

                <TextView
                    style="@style/UserDetailsInfoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_dp_12"
                    android:text="@string/title_date_of_birthday" />

                <TextView
                    style="@style/UserDetailsInfoValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_dp_4"
                    app:dateOfBirthday="@{model.dateOfBirthdayInMillis}"
                    tools:text="2020-10-13" />

                <TextView
                    style="@style/UserDetailsInfoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_dp_12"
                    android:text="@string/title_phone_number" />

                <TextView
                    style="@style/UserDetailsInfoValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_dp_4"
                    android:text="@{model.phoneNumber}"
                    tools:text="+1 (754) 666-1713" />

                <Button
                    android:id="@+id/buttonCall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_dp_24"
                    android:text="@string/action_call" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>